--- a/css/deck.css
+++ b/css/deck.css
@@ -4,7 +4,7 @@ body {
 	margin: 0px;
 	font-family: 'roboto',
 		sans-serif;
-	background-image: url("images/old-grunge-black-gray-background.png") !important;
+	background-image: url("../images/old-grunge-black-gray-background.png") !important;
 	background-position: center center;
 	background-repeat: none;
 	background-attachment: fixed;
@@ -139,7 +139,7 @@ button:active {
 }
 
 .card_front {
-    background-image: url("images/card_back_02.png");
+    background-image: url("../images/card_back_02.png");
 	z-index: 2;
 	transform: rotateY(0deg);
 	background-position: -80px -50px;
